force-app/main/default/objects/PgM_Governance__c/PgM_Governance__c.object-meta.xml
<CustomObject>
    <label>Governance Request</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Governance Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>