force-app/main/default/objects/PgM_Governance__c/fields/PgM_Alternatives_to_Change__c.field-meta.xml
<CustomField>
    <fullName>PgM_Alternatives_to_Change__c</fullName>
    <label>Alternatives to Change</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>