force-app/main/default/objects/PgM_Governance__c/fields/PgM_ARB_Categories__c.field-meta.xml
<CustomField>
    <fullName>PgM_ARB_Categories__c</fullName>
    <label>ARB Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance Requirement</fullName>
            </value>
            <value>
                <fullName>Custom Interface Needed</fullName>
            </value>
            <value>
                <fullName>Expanded Scope</fullName>
            </value>
            <value>
                <fullName>High Customization</fullName>
            </value>
            <value>
                <fullName>High Data Volume</fullName>
            </value>
            <value>
                <fullName>High Performance Needed</fullName>
            </value>
            <value>
                <fullName>Info Sec / Security</fullName>
            </value>
            <value>
                <fullName>New/Changed L2 Capability</fullName>
            </value>
            <value>
                <fullName>New Business Unit/Orgs</fullName>
            </value>
            <value>
                <fullName>New Integration</fullName>
            </value>
            <value>
                <fullName>New System Replacement</fullName>
            </value>
            <value>
                <fullName>Significant Data Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>