force-app/main/default/objects/PgM_Governance__c/fields/PgM_Associated_Risks__c.field-meta.xml
<CustomField>
    <fullName>PgM_Associated_Risks__c</fullName>
    <inlineHelpText>Describe the risks of making the change as well as the risks of not making the change.</inlineHelpText>
    <label>Associated Risks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>