force-app/main/default/objects/PgM_Governance__c/fields/PgM_Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>PgM_Business_Impact__c</fullName>
    <inlineHelpText>What is the business impact of changing and of not changing?</inlineHelpText>
    <label>Business Impact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>