force-app/main/default/objects/PgM_Governance__c/fields/PgM_Change_To__c.field-meta.xml
<CustomField>
    <fullName>PgM_Change_To__c</fullName>
    <label>Change To</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scope</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>