force-app/main/default/objects/PgM_Governance__c/fields/PgM_Decision_Needed_By__c.field-meta.xml
<CustomField>
    <fullName>PgM_Decision_Needed_By__c</fullName>
    <label>Decision Needed By</label>
    <type>Date</type>
</CustomField>