force-app/main/default/objects/PgM_Governance__c/fields/PgM_Governance_Meeting__c.field-meta.xml
<CustomField>
    <fullName>PgM_Governance_Meeting__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Governance Meeting</label>
    <referenceTo>PgM_Governance_Meeting__c</referenceTo>
    <relationshipLabel>Governance Requests</relationshipLabel>
    <relationshipName>Governance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>