force-app/main/default/objects/PgM_Governance__c/fields/PgM_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>PgM_Next_Steps__c</fullName>
    <label>Next Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>