force-app/main/default/objects/PgM_Governance__c/fields/PgM_Primary_Workstream__c.field-meta.xml
<CustomField>
    <fullName>PgM_Primary_Workstream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Workstream</label>
    <referenceTo>PgM_Workstream__c</referenceTo>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>