force-app/main/default/objects/PgM_Governance__c/fields/PgM_Problem_Statement__c.field-meta.xml
<CustomField>
    <fullName>PgM_Problem_Statement__c</fullName>
    <label>Problem Statement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>