force-app/main/default/objects/PgM_Governance__c/fields/PgM_Rationale__c.field-meta.xml
<CustomField>
    <fullName>PgM_Rationale__c</fullName>
    <label>Rationale for the Change</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>