force-app/main/default/objects/PgM_Governance__c/fields/PgM_Recommended_Solution_Count__c.field-meta.xml
<CustomField>
    <fullName>PgM_Recommended_Solution_Count__c</fullName>
    <label>Recommended Solution Count</label>
    <summaryFilterItems>
        <field>PgM_Solution_Option__c.PgM_Recommended_Solution__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PgM_Solution_Option__c.PgM_Governance_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>