force-app/main/default/objects/PgM_Governance__c/fields/PgM_Record_Choice_Label__c.field-meta.xml
<CustomField>
    <fullName>PgM_Record_Choice_Label__c</fullName>
    <formula>Name + &apos; - &apos; +  PgM_Primary_Workstream__r.Name + &apos; - &apos; +  RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Choice Label</label>
    <type>Text</type>
</CustomField>