force-app/main/default/objects/PgM_Governance__c/fields/PgM_Related_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>PgM_Related_Change_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Change Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PgM_Governance__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Change Request</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PgM_Governance__c</referenceTo>
    <relationshipName>ARB_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>