force-app/main/default/objects/PgM_Governance__c/fields/PgM_Request_Owner__c.field-meta.xml
<CustomField>
    <fullName>PgM_Request_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>