force-app/main/default/objects/PgM_Governance__c/fields/PgM_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>PgM_Requested_By__c</fullName>
    <label>Requested By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Name</fullName>
            </value>
            <value>
                <fullName>Vendor A</fullName>
            </value>
            <value>
                <fullName>Vendor B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>