force-app/main/default/objects/PgM_Governance__c/fields/PgM_Responsible_Architect__c.field-meta.xml
<CustomField>
    <fullName>PgM_Responsible_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Governance</relationshipName>
    <type>Lookup</type>
</CustomField>