force-app/main/default/objects/PgM_Governance__c/fields/PgM_Strategic_Direction__c.field-meta.xml
<CustomField>
    <fullName>PgM_Strategic_Direction__c</fullName>
    <label>Strategic Direction</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>