force-app/main/default/objects/PgM_Governance__c/recordTypes/Architecture_Review_Board.recordType-meta.xml
<RecordType>
    <fullName>Architecture_Review_Board</fullName>
    <active>true</active>
    <label>Architecture Review Board</label>
</RecordType>