force-app/main/default/objects/PgM_Governance__c/recordTypes/Design_Authority.recordType-meta.xml
<RecordType>
    <fullName>Design_Authority</fullName>
    <active>true</active>
    <label>Design Authority</label>
</RecordType>