force-app/main/default/objects/PgM_Governance__c/recordTypes/PgM_Change_Request.recordType-meta.xml
<RecordType>
    <fullName>PgM_Change_Request</fullName>
    <active>true</active>
    <label>Change Request</label>
</RecordType>