force-app/main/default/objects/PgM_Governance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>PgM_Request_Owner__c</columns>
    <columns>PgM_Primary_Workstream__c</columns>
    <columns>PgM_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>