force-app/main/default/objects/PgM_Governance__c/listViews/Architecture_Review_Board_Requests.listView-meta.xml
<ListView>
    <fullName>Architecture_Review_Board_Requests</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>PgM_Request_Owner__c</columns>
    <columns>PgM_Primary_Workstream__c</columns>
    <columns>PgM_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PgM_Governance__c.Architecture_Review_Board</value>
    </filters>
    <label>Architecture Review Board Requests</label>
</ListView>