force-app/main/default/objects/PgM_Governance__c/listViews/Change_Control_Board_Requests.listView-meta.xml
<ListView>
    <fullName>Change_Control_Board_Requests</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>PgM_Request_Owner__c</columns>
    <columns>PgM_Primary_Workstream__c</columns>
    <columns>PgM_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PgM_Governance__c.PgM_Change_Request</value>
    </filters>
    <label>Change Control Board Requests</label>
</ListView>