force-app/main/default/objects/PgM_Governance__c/listViews/Design_Authority_Requests.listView-meta.xml
<ListView>
    <fullName>Design_Authority_Requests</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>PgM_Request_Owner__c</columns>
    <columns>PgM_Primary_Workstream__c</columns>
    <columns>PgM_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PgM_Governance__c.Design_Authority</value>
    </filters>
    <label>Design Authority Requests</label>
</ListView>